--- a/style.css
+++ b/style.css
@@ -29,9 +29,9 @@ nav {
 }
 
 #logo {
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
+	padding-left: 175px;
+	height: auto;
+	width: 50%;
 }
 
 .signIn, .signup {
